--- a/index.html
+++ b/index.html
@@ -2,4 +2,14 @@
 layout: default
 ---
 
-<div><object><script type='text/javascript' src='https://us-west-2b.online.tableau.com/javascripts/api/viz_v1.js'></script><div class='tableauPlaceholder' style='width: 1366px; height: 537px;'><object class='tableauViz' width='1366' height='537' style='display:none;'><param name='host_url' value='https%3A%2F%2Fus-west-2b.online.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='&#47;t&#47;bkamaleson1994' /><param name='name' value='GunViolenceIncidentstoPrayerResponses&#47;Sheet1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='showAppBanner' value='false' /><param name='filter' value='iframeSizedToWindow=true' /></object></div>
+<button id="pray">I prayed today</button>
+
+<script>
+  const API = "https://https://notice312.herokuapp.com";
+  document.getElementById("pray").addEventListener("click", function() {
+    const xhr = new XMLHttpRequest();
+    xhr.open("POST", API + "/prayer", true);
+    xhr.setRequestHeader('Content-type','application/json; charset=utf-8');
+    xhr.send("{}");
+  });
+</script>
