--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
   document.getElementById("pray").addEventListener("click", function() {
     const xhr = new XMLHttpRequest();
     xhr.open("POST", API + "/prayer", true);
-    xhr.setRequestHeader('Content-type','application/json; charset=utf-8');
+    xhr.setRequestHeader('Content-Type','application/json; charset=utf-8');
     xhr.send("{}");
   });
 </script>
