--- a/index.html
+++ b/index.html
@@ -2,14 +2,25 @@
 layout: default
 ---
 
-<button id="pray">I prayed today</button>
+<button id="pray" disabled>I prayed today</button>
 
 <script>
-  const API = "https://notice312.herokuapp.com";
-  document.getElementById("pray").addEventListener("click", function() {
-    const xhr = new XMLHttpRequest();
-    xhr.open("POST", API + "/prayer", true);
-    xhr.setRequestHeader('Content-Type','application/json; charset=utf-8');
-    xhr.send("{}");
-  });
+  const today = new Date();
+  today.setHours(0, 0, 0, 0);
+
+  if(!localStorage.getItem(today.toDateString())) {
+    const pray = document.getElementById("pray");
+    pray.disabled = false;
+
+    pray.addEventListener("click", function() {
+      const API = "https://notice312.herokuapp.com";
+      const xhr = new XMLHttpRequest();
+      xhr.open("POST", API + "/prayer", true);
+      xhr.setRequestHeader('Content-Type','application/json; charset=utf-8');
+      xhr.send("{}");
+
+      pray.disabled = true;
+      localStorage.setItem(today.toDateString(), 'X');
+    });
+  }
 </script>
