--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 layout: default
 ---
 
-<button id="pray" disabled>I prayed today</button>
+<img style="width:100%" src="/logo.png">
+<h2>Mobilizing Christians to actively pray for a city devastated by violence</h2>
+
+<div style="text-align:center">
+  <button class="button" id="pray" disabled>Join in prayer</button>
+</div>
 
 <script>
   const today = new Date();
