--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<img style="width:100%" src="/logo.png">
+<img style="width:100%" src="logo.png">
 <h2>Mobilizing Christians to actively pray for a city devastated by violence</h2>
 
 <div style="text-align:center">
