--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
       xhr.setRequestHeader('Content-Type','application/json; charset=utf-8');
       xhr.send("{}");
 
-      pray.disabled = true;
       localStorage.setItem(today.toDateString(), 'X');
+      window.location.reload(true)
     });
   }
 </script></main></body>
