--- a/index.html
+++ b/index.html
@@ -183,9 +183,12 @@
       xhr.open("POST", API + "/prayer", true);
       xhr.setRequestHeader('Content-Type','application/json; charset=utf-8');
       xhr.send("{}");
-
-      localStorage.setItem(today.toDateString(), 'X');
-      window.location.reload(true)
+      xhr.onreadystatechange = function() {
+        if (xhr.readyState === 4) {
+          localStorage.setItem(today.toDateString(), 'X');
+          window.location.reload(true)
+        }
+      };
     });
   }
 </script></main></body>
